package com.directi.training.dip.exercise_refactored;

import java.io.IOException;

public interface IRead {
    public String Read() throws IOException;
}
