package com.directi.training.dip.exercise_refactored;

import java.io.IOException;

public interface IWrite {
    public int write(String text) throws IOException;
}
